--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@ limitations under the License.
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
             <version>3.4.5</version>
-            <scope>test</scope>
+          <!--  <scope>test</scope>-->
           </dependency>
         </dependencies>
       </dependencyManagement>
